<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_profile_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/viewDividerEdit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvEditTitle"
        android:layout_marginTop="12dp"
        android:background="#DDDDDD" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewDividerEdit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/name_hint"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameLabel"
        android:layout_marginTop="4dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvBioLabelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:text="@string/bio_hint"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBioLabelEdit"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:hint="@string/bio_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save" />

</RelativeLayout>
